--- a/editor/editor.css
+++ b/editor/editor.css
@@ -100,7 +100,7 @@ div.categoryOthers {
 }
 
 .magnifyCursor {
-  cursor: url('glass.cur'), auto;
+  cursor: url('glass6.cur'), auto;
 }
 
 div.settings {
